--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,8 @@
 hello: Hi
 name: David
+
+blankEmail: Please provide your email address
+emailSize: Email must be between {min} and {max} chars long
+
+NotBlank.user.email: Another way: Please provide your email address
+Size.email: Another way: {0} must be between {2} and {1} chars long
