Introduced flash attributes

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,3 +3,5 @@ name: David
 
 blankEmail: Please provide your email address
 emailSize: Email must be between {min} and {max} chars long
+
+signupSuccess: Signup succeeded!
