Coded custom validations

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,8 @@ blankEmail: Please provide your email address
 emailSize: Email must be between {min} and {max} chars long
 
 signupSuccess: Signup succeeded!
+
+blankPassword: Please provide a password
+passwordSize: Password must be between {min} and {max} chars long
+
+duplicateEmail: Email id already used
