--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,9 +4,27 @@ name: David
 blankEmail: Please provide your email address
 emailSize: Email must be between {min} and {max} chars long
 
-signupSuccess: Signup succeeded!
+signupSuccess: Signup succeeded! Please check your mail to verify yourself.
 
 blankPassword: Please provide a password
 passwordSize: Password must be between {min} and {max} chars long
 
 duplicateEmail: Email id already used
+
+verifySubject: Please verify your email id
+verifyEmail: Hi,<br/><br/>Your email id at XYZ is unverified. \
+Please click the link below to get verified:<br/><br/>{0}<br/><br/>
+
+unverified:	Your email id is unverified. \
+<a href="/users/{0}/resend-verification-mail">Click here</a> \
+to get the verification mail again.
+
+verificationSuccess: Verification succeeded!
+alreadyVerified: Already verified
+wrongVerificationCode: Wrong verification code
+
+verificationMailSent: Verification mail sent
+
+userNotFound: User not found
+
+notPermitted: Not permitted
