--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,3 +28,18 @@ verificationMailSent: Verification mail sent
 userNotFound: User not found
 
 notPermitted: Not permitted
+
+emailNotFound: Email not found
+
+checkMailResetPassword: Please check your mail to reset your password.
+
+resetPasswordSubject: Forgot password?
+resetPasswordEmail: Hi,<br/><br/>\
+Please click the link below to reset your password:\
+<br/><br/>{0}<br/><br/>
+
+passwordsDoNotMatch: Passwords do not match
+
+invalidUrl: The URL is no more valid. Probably it's already used.
+passwordChanged: Password Changed.
+
