--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -43,3 +43,5 @@ passwordsDoNotMatch: Passwords do not match
 invalidUrl: The URL is no more valid. Probably it's already used.
 passwordChanged: Password Changed.
 
+editSuccess: Edit succeeded!
+
